--- a/frontend/src/app/timeline/timeline.module.css
+++ b/frontend/src/app/timeline/timeline.module.css
@@ -162,10 +162,10 @@
 .entryGrid {
   display: flex;
   flex-wrap: wrap;
-  row-gap: 15px;
-  column-gap: 2px;
+  row-gap: 60px;
+  column-gap: 30px;
   margin-top: 1px;
-  perspective: 1500px;
+  justify-content: flex-start;
 }
 
 .journalItem {
